<resources>
    <string name="app_name">OPA</string>

    <string name="title_section1">내 아바타</string>
    <string name="title_section2">스케줄러</string>
    <string name="title_section3">행동 추천</string>
    <string name="title_section4">만보계</string>

    <string name="height">키</string>
    <string name="weight">체중</string>
    <string name="age">연령</string>
    <string name="sex">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="submit">확    인</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--
    <string name="action_example"></string>
    -->

    <string name="action_settings">사용자 설정</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_my_analysis_fragment">Hello analysis fragment</string>
    <string name="hello_scheduler_fragment">Hello scheduler fragment</string>
    <string name="hello_act_recommender_fragment">Hello hello_act_recommender_fragment fragment</string>
    <string name="title_activity_user_settings">사용자 설정</string>

    <string name="hello_world">Hello world!</string>

    <!-- MyAvatar -->
    <string name="my_bmi">BMI</string>
    <string name="my_obesity_status">비만 상태</string>
    <string name="my_daily_bmr">일일 기초 대사량</string>

    <!-- 만보 -->
    <string name="manbo_initial">0</string>
    <string name="manbo_start">만보계 시작</string>
</resources>
