<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ncrc.nise.ajou.ac.kr.opa.activity.UserSettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/height"
        android:id="@+id/textViewTitleObesityStatus"
        android:layout_below="@+id/textViewBMI"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/weight"
        android:id="@+id/textViewTitleBMI"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/age"
        android:id="@+id/textViewTileDailyBMR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textViewObesityStatus" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/textViewBMI"
        android:layout_below="@+id/textViewTitleBMI"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/textViewObesityStatus"
        android:layout_below="@+id/textViewTitleObesityStatus"
        android:layout_alignLeft="@+id/textViewBMI"
        android:layout_alignStart="@+id/textViewBMI" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/textViewDailyBMR"
        android:layout_below="@+id/textViewTileDailyBMR"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sex"
        android:id="@+id/textViewSex"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/textViewDailyBMR" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewSex"
        android:gravity="center_horizontal"
        android:id="@+id/radiogroupSex"
        android:layout_alignRight="@+id/textViewDailyBMR"
        android:layout_alignEnd="@+id/textViewDailyBMR"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/textViewDailyBMR"
        android:layout_alignStart="@+id/textViewDailyBMR"
        android:layout_above="@+id/buttonSubmit">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/radioButtonMale"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/female"
            android:id="@+id/radioButtonFemale"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/buttonSubmit"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/radiogroupSex"
        android:layout_alignStart="@+id/radiogroupSex"
        android:layout_alignRight="@+id/radiogroupSex"
        android:layout_alignEnd="@+id/radiogroupSex" />

</RelativeLayout>
